--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -9,6 +9,8 @@ $links-text: #2D97F9;
 $timer-text: #01B9C5;
 $timer-warning: #FD4D35;
 $price-cross: #95979F;
+$checkbox: #01B9C5;
+
 
 $white: #FFFFFF;
 $hover-tile: #e9f4f4;
