--- a/src/components/Tiles/SmallTile.module.scss
+++ b/src/components/Tiles/SmallTile.module.scss
@@ -3,8 +3,8 @@
 
 .tile {
     position: relative;
-    max-width: 147px;
-    height: 221px;
+    width: 147px;
+    height: 201px;
     
     display: flex;
     flex-direction: column;
@@ -12,7 +12,7 @@
 
     background-color: $white;
     transition: all .5s;
-    padding: 45px 35px 25px 35px;
+    padding: 45px 25px 25px 25px;
     border: 2px solid $tile-border;
     border-radius: 20px;
     grid-column: span 1;
@@ -50,15 +50,75 @@
     }
 
     .description {
+        text-align: center;
         padding-top: 21px;
         font-weight: 400;
         font-size: 16px;
         line-height: 20px;
         color: $paragraf-text;
     }
+}
 
-    @include hover() {
-        background-color: $hover-tile;
-        border: 2px solid $hover-tile-border;
+// .active {
+//     @extend .tile;
+//     background-color: $hover-tile !important; 
+//     border: 2px solid $hover-tile-border !important;
+// }
+
+.active {
+    position: relative;
+    width: 147px;
+    height: 201px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    background-color: $hover-tile;
+    transition: all .5s;
+    padding: 45px 25px 25px 25px;
+    border: 2px solid $hover-tile-border;
+    border-radius: 20px;
+    grid-column: span 1;
+    cursor: pointer;
+    font-size: normal;
+
+    article {
+        h3 {
+            white-space: nowrap;
+            color: $second-text;
+            font-size: 25px;
+            line-height: 30px;
+            font-weight: 500;
+            text-align: start;
+        }
+
+        p {
+            text-align: end;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 26.4px;
+            color: #95979F;
+        }
+
+        .mainPrice {
+            text-align: end;
+            color: $primary-text;
+            font-weight: 600;
+            font-size: 50px;
+            line-height: 55px;
+            letter-spacing: -2px;
+            
+            padding-top: 21px;
+        }
+    }
+
+    .description {
+        text-align: center;
+        padding-top: 21px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        color: $paragraf-text;
     }
 }
