--- a/src/components/Tiles/BigTile.module.scss
+++ b/src/components/Tiles/BigTile.module.scss
@@ -43,6 +43,7 @@
                 line-height: 55px;
                 font-weight: 600;
                 color: $primary-text;
+                white-space: nowrap;
             }
 
             p {
