--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -11,8 +11,13 @@ $timer-warning: #FD4D35;
 $price-cross: #95979F;
 $checkbox: #01B9C5;
 
-
 $white: #FFFFFF;
 $hover-tile: #e9f4f4;
 $hover-tile-border: #01B9C5;
 $tile-border: #D3D6DD;
+
+$signboard: #01B9C5;
+$popup-dec: #01B9C5;
+$popup-border-tile: #E7EAF1;
+$popup-btn: #555965;
+$popup-line: #E7EAF1;
